main/default/objects/Phone_Location_Matrix__c/fields/Headset_Type__c.field-meta.xml
<CustomField>
    <fullName>Headset_Type__c</fullName>
    <label>Headset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bluetooth Adapter</fullName>
            </value>
            <value>
                <fullName>Cordless Headset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>