main/default/objects/Phone_Location_Matrix__c/fields/Name_of_Phone_Location__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Phone_Location__c</fullName>
    <label>Name of Phone/Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>