main/default/objects/Phone_Location_Matrix__c/fields/Technical_Information__c.field-meta.xml
<CustomField>
    <fullName>Technical_Information__c</fullName>
    <label>Technical Information</label>
    <referenceTo>Technical_Information__c</referenceTo>
    <relationshipLabel>Phone Location Matrices</relationshipLabel>
    <relationshipName>Phone_Location_Matrices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>