main/default/objects/Phone_Location_Matrix__c/fields/Type_of_Phone_Device__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Phone_Device__c</fullName>
    <label>Type of Phone/Device</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Self Labeling</fullName>
            </value>
            <value>
                <fullName>Conference Room Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>