main/default/objects/Phone_Location_Matrix__c/fields/UM__c.field-meta.xml
<CustomField>
    <fullName>UM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UM</label>
    <type>Checkbox</type>
</CustomField>